# zc160

./: .gitignore  LICENSE  README.md
code/: zc160.sublime-project
code/OS/: Makefile  compile.sh  main.asm  system.def  zc160.asm  zc160.def
code/VGA/: Makefile  compile.sh  logo.psd  main.asm  math.asm  system-font.zfont  system.def  zc160_vga.asm  zc160_vga.def
code/emulator/: autogen.sh  configure.ac.sh
code/emulator/src/: Makefile.am  hd44780.c  hd44780.h  main.c  main.h  main_vga.c  main_vga.h  mem.c  profiler.c  profiler.h  vga.c  vga.h  x.c  x.h  z80cpu.c  z80cpu.h  zc160.c  zc160.h
code/emulator/src/Z80/: Makefile.am
code/emulator/src/Z80/.deps/: ConDebug.Plo  Z80.Plo
code/emulator/src/public_html/: index.html  style.css  z80w.js
hw/acb_0_8/: acb_0_8.sch  acb_0_8.syn
hw/acb_9_16/: acb_9_16.sch  acb_9_16.syn
hw/cnt8bit/: cnt8bit.sch  cnt8bit.syn
hw/cpu_cs/: cpu_cs.sch  cpu_cs.syn
hw/cpuiolatch/: cpuiolatch.sch  cpuiolatch.syn
hw/dmacnt_0_7/: dmacnt_0_7.sch  dmacnt_0_7.syn
hw/iramctrl/: iramctrl.sch  (+1 more)
z80w/: Backup of z80board.LYT  Backup of z80board2.DSN  Backup of z80board2.LYT  Backup of z80exp.DSN  Backup of z80exp.LYT  Backup of z80power.DSN  Backup of z80power.LYT  TEST.LST  TEST2.LST  test.asm  test2.asm  z80board.DSN  z80board.LYT  z80board.SDF  z80board2.DSN  z80board2.LYT  z80board2.SDF  z80exp.DSN  z80exp.LYT  z80exp.SDF  z80power.DSN  z80power.LYT  z80power.SDF
z80w/emulator/src/: Makefile.am  emuz80w.c  emuz80w.h  hd44780.c  hd44780.h  main.c  main.h  mem.c  mem.h  x.c  z80wos.d52
z80w/emulator/src/Z80/.deps/: Debug.Plo
(+138 files in other folders)
